/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/any.proto";

package opennms.azure;
option java_multiple_files = true;
option java_package = "org.opennms.azure.contract";

// todo: create common credential fields into reusable message

message AzureScanRequest {
  int64 credential_id = 1;
  string client_id = 2;
  string client_secret = 3;
  string subscription_id = 4;
  string directory_id = 5;
  int64 timeout_ms = 6;
  int32 retries = 7;
}

message AzureMonitorRequest {
  string resource = 1;
  string resource_group = 2;
  string host = 3; // dummy in order for metrics to work (management ip)
  string client_id = 4;
  string client_secret = 5;
  string subscription_id = 6;
  string directory_id = 7;
  int32 retries = 8;
  int64 timeout_ms = 9;
}

message AzureCollectorRequest {
  string resource = 1;
  string resource_group = 2;
  string host = 3; // dummy in order for metrics to work (management ip)
  string client_id = 4;
  string client_secret = 5;
  string subscription_id = 6;
  string directory_id = 7;
  int32 retries = 8;
  int64 timeout_ms = 9;
}
